@@ -5,3 +5,5 @@
 2016-08-27 Fred Gleason <fredg@paravelsystems.com>
 	* Added a Configuration dialog in 'src/configdialog.cpp' and
 	'src/configdialog.h'.
+2016-08-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'Count Up/Count Down' control.
